--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && CI=true npm run test"
     }
   },
   "lint-staged": {
