cleanup eslint, prettier, editorconfig template settings

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,tsx}": [
+    "./**/*.{ts,tsx,js}": [
       "eslint --fix"
     ],
     "./**/*.{html,css,scss,json}": [
